--- a/dumpy2.html
+++ b/dumpy2.html
@@ -236,7 +236,7 @@
       <!-- Static Notification -->
       <div class="notification">
         <div class="notification-status">New</div>
-        <h3>Sample Static Notification</h3>
+        <h3>Sample  Notification</h3>
         <p>This is a static notification for testing purposes.</p>
         <div class="download-btn">
           <a href="" download="sample-static-notification.pdf">Download PDF</a>
