--- a/form2.html
+++ b/form2.html
@@ -77,7 +77,7 @@
     <input type="text" id="name" required /><br><br>
 
     <label for="age">College</label>
-    <input type="text" id="age" /><br><br>
+    <input type="text" id="college" /><br><br>
 
     <label for="department">Department</label>
     <input type="text" id="dept" /><br><br>
